updated index.html & style.css

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
 <style>
     body {
         background: url(photos/images\ \(49\).jpeg);
-        /* background-repeat: repeat; */
-        /* background-size: cover; */
-        /* background-position: center; */
+        background-repeat: repeat;
+        background-position: center;
     }
     
     .card {
@@ -31,24 +30,13 @@
         background-repeat: no-repeat;
         object-fit: cover;
         object-position: center;
-        /* aspect-ratio: 300 / 397; */
-        /* aspect-ratio: 3 / 4; */
+        aspect-ratio: 300 / 397;
     }
-    /* .card img {
-        visibility: hidden;
-        width: 100%;
-        width: var(--card-width);
-        height: auto;
-        max-height: var(--card-height);
-        object-fit: cover;
-        object-position: center;
-    } */
 </style>
 
 <body>
     <div class="card">
         <h2>Rudo Chinyama</h2>
-        <!-- <img src="photos/images (49).jpeg" style='aspect-ratio: 3 / 4;' alt="Aaliyah"> -->
     </div>
 
 </body>
